--- a/src/Components/Feed/feed.css
+++ b/src/Components/Feed/feed.css
@@ -4,3 +4,16 @@
     width: 50%;
     margin: auto;
 }
+
+.ErrorMsg {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  letter-spacing: 0px;
+  word-spacing: 0px;
+  color: #FF0000;
+  font-weight: 700;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+}
